# tiberius

./: Cargo.toml  README.md  aliases.js  crates.js  index.html  search-index.js  settings.html  source-files.js
benches/: bench.rs
examples/: async-std.rs  new.rs  tokio.rs
src/: client.rs  conn.rs  lib.rs  packets.rs  result.rs  row.rs  sql_read_bytes.rs  stmt.rs  tds.rs
src/client/: builder.rs  config.rs  connection.rs  jdbc.rs
src/protocol/: mod.rs  types.rs  util.rs
src/tds/: numeric.rs  time.rs
src/tiberius/: async_read_le_ext.rs.html  client.rs.html  collation.rs.html  error.rs.html  from_sql.rs.html  lib.rs.html  macros.rs.html  prepared.rs.html  protocol.rs.html  result.rs.html  (+6 more)
tests/: named-instance-async.rs  named-instance-tokio.rs  query.rs  query_tokio.rs  test.rs  test_prepared.rs  test_schema.sql
tiberius/: all.html  enum.AuthMethod.html  enum.ColumnData.html  enum.ColumnType.html  enum.EncryptionLevel.html  enum.Error.html  index.html  macro.from_column_data!.html  macro.from_column_data.html  macro.to_sql!.html  macro.to_sql.html  macro.uint_enum!.html  macro.uint_enum.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  struct.Column.html  struct.Config.html  struct.Date.html  struct.DateTime.html  struct.DateTime2.html  struct.DateTimeOffset.html  struct.ExecuteResult.html  struct.Numeric.html  struct.QueryResult.html  struct.Row.html  struct.SmallDateTime.html  struct.Time.html  struct.Uuid.html  trait.FromSql.html  trait.FromSqlOwned.html  trait.IntoSql.html  trait.SqlBrowser.html  trait.ToSql.html  type.Result.html
(+207 files in other folders)
