[package]
name = "tiberius"
description = "A TDS (MSSQL) driver"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/steffengy/tiberius"
authors = ["Steffen Butzer <steffen.butzer@outlook.com>"]
keywords = ["tds", "mssql"]
license = "MIT"

[dependencies]
encoding = "0.2.32"
chrono = "0.2.17"
byteorder="0.4.2"
net2="0.2"
num="0.1.28"
num-macros="0.1.28"